Update title and email in personal website

--- a/personalwebsite.html
+++ b/personalwebsite.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jinrui (Carrie) - PhD Candidate in Accounting</title>
+    <title>Jinrui (Carrie) CHU - PhD Candidate in Accounting</title>
     <style>
         * {
             margin: 0;
@@ -171,7 +171,7 @@
             <div class="subtitle">NUS Business School, National University of Singapore</div>
             
             <div class="contact-info">
-                <span>📧 <a href="mailto:your.email@u.nus.edu">your.email@u.nus.edu</a></span>
+                <span>📧 <a href="mailto:your.email@u.nus.edu">jinrui.chu@u.nus.edu</a></span>
                 <span>📍 Singapore</span>
                 <!-- Add more contact info as needed -->
             </div>
