--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
             <!-- Paper 1 -->
             <div class="paper-item">
-                <div class="paper-title">Does Social Media Climate Information Move the Needles? Evidence from Consumer Dietary Shifts</div>
+                <div class="paper-title">Social networks catalyze low-carbon dietary shifts following climate shocks</div>
                 <div class="paper-authors">with Sumit Agarwal, Yupeng Lin, and Jean Zeng</div>
                 
                 <div class="paper-actions">
