--- a/index.html
+++ b/index.html
@@ -238,7 +238,7 @@
 
         <ul class="contact-list">
             <li><a href="mailto:jinrui.chu@u.nus.edu"><span class="icon">✉</span> jinrui.chu@u.nus.edu</a></li>
-            <li><a href="cv.pdf"><span class="icon">📄</span> Curriculum Vitae</a></li>
+            <!--<li><a href="cv.pdf"><span class="icon">📄</span> Curriculum Vitae</a></li>-->
             <li><a href="https://papers.ssrn.com/sol3/cf_dev/AbsByAuth.cfm?per_id=7922564" target="_blank"><span class="icon">📚</span> SSRN Profile</a></li>
             <li><a href="https://www.linkedin.com/in/jinrui-chu-040316192/" target="_blank"><span class="icon">🔗</span> LinkedIn</a></li>
         </ul>
