--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
             <!-- Paper 1 -->
             <div class="paper-item">
-                <div class="paper-title">Social Learning and Households Environmental Behavior</div>
+                <div class="paper-title">Social Learning and Green Consumption: Evidence from Climate Shocks</div>
                 <div class="paper-authors">with Sumit Agarwal, Yupeng Lin, and Jean Zeng</div>
                 
                 <div class="paper-actions">
