--- a/index.html
+++ b/index.html
@@ -271,7 +271,7 @@
                 </div>
                 
                 <div id="abs1" class="abstract-content">
-                    We exploit climate-related discussions triggered by natural disasters to generate exogenous variation in consumers’ exposure to climate change information through social networks. Using proprietary data from a major U.S. food delivery platform, we show that learning about friends’ disaster experiences on social media leads to a shift in dietary choices toward lower-carbon foods. More friends’ climate-related posts amplify this effect, accelerating the shift in consumption patterns. In turn, exposed individuals become more engaged in online climate discourse themselves, creating a self-reinforcing loop between information exposure and behavioral change.
+                    This paper examines the impact of learning about the adverse effects of climate change on households’ environmental behaviors. We rely on natural disaster-triggered climate discussions from friends to generate exogenous variations in the intensity of learning. Utilizing proprietary data from a major food delivery platform in the U.S., we find that individuals’ learning about their friends’ disaster experiences via social media translates into a dietary transition towards foods with a low-carbon footprint. Friends' climate-related social media posts act as an accelerator, enhancing these changes in consumption patterns. Further, individuals subsequently increase their own climate change discussions online, creating a reinforcing information-consumption loop that propagates through the network.
                 </div>
             </div>
 
