--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jinrui (Carrie) Chu | NUS</title>
+    <title>Carrie Chu - Social Learning and Green Consumption</title>
+    <meta name="description" content="Working Paper: Social Learning and Green Consumption: Evidence from Climate Shocks. Co-authored with Sumit Agarwal, Yupeng Lin, Jean Zeng 
     <meta name="google-site-verification" content="X6jtqhdcj5PV_8opiPp3AZEh2Gy0YRmth1Fjtq94Ins" />
     <style>
         :root {
