--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
                 
                 <div class="paper-actions">
                     <button onclick="toggleAbstract('abs1')">Abstract ▼</button>
-                    <!-- <a href="paper.pdf">PDF</a> -->
+                    <a href="Social_Learning_and_Green_Consumption_Evidence_from_Climate_Shocks.pdf">Download Abstract (PDF)</a>
                 </div>
                 
                 <div id="abs1" class="abstract-content">
