Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     {"@type": "Person", "name": "Yupeng Lin"},
                     {"@type": "Person", "name": "Jean Zeng"}
                 ],
-                "url": "https://carriechu.github.io/Social_Learning_and_Green_Consumption_Evidence_from_Climate_Shocks.pdf"
+                "url": "https://carriechu.github.io/Social_Learning_and_Green_Consumption_Evidence_from_Climate_Shocks.pdf",
                 "description": "This paper examines the impact of learning about the adverse effects of climate change on households' environmental behaviors. We rely on natural disaster-triggered climate discussions from friends to generate exogenous variations in the intensity of learning. Utilizing proprietary data from a major food delivery platform in the U.S., we find that individuals' learning about their friends' disaster experiences via social media translates into a dietary transition towards foods with a low-carbon footprint. Friends' climate-related social media posts act as an accelerator, enhancing these changes in consumption patterns. Further, individuals subsequently increase their own climate change discussions online, creating a reinforcing information-consumption loop that propagates through the network."
             },
             {
@@ -424,5 +424,6 @@
 </body>
 
 </html>
+
 
 
